After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720896 - can't remove language from preferences
can't remove language from preferences
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Preferences
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-12-21 18:46 UTC by William Jon McCann
Modified: 2014-01-03 19:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Reset the language setting when all languages are removed from the UI (755 bytes, patch)
2013-12-21 18:55 UTC, William Jon McCann
none Details | Review
Reset the language setting when all languages are removed from the UI (778 bytes, patch)
2014-01-03 19:25 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2013-12-21 18:46:28 UTC
At one point I added a language for testing and now I can't remove it. It is removed from the UI but the next time I open the prefs dialog it reappears.
Comment 1 William Jon McCann 2013-12-21 18:55:12 UTC
Created attachment 264729 [details] [review]
Reset the language setting when all languages are removed from the UI
Comment 2 William Jon McCann 2014-01-03 19:25:32 UTC
Created attachment 265247 [details] [review]
Reset the language setting when all languages are removed from the UI
Comment 3 William Jon McCann 2014-01-03 19:26:26 UTC
Updated from Carlos' review on IRC.
<KaL> LGTM
Comment 4 William Jon McCann 2014-01-03 19:26:45 UTC
Attachment 265247 [details] pushed as 4495e1b - Reset the language setting when all languages are removed from the UI