Reset the language setting when all languages are removed from the UI

https://bugzilla.gnome.org/show_bug.cgi?id=720896